// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge accept jsx as children 1`] = `
<span
  className="css-17jd12v"
>
  <span>
    string
  </span>
</span>
`;

exports[`Badge danger 1`] = `
<span
  className="css-1g44s7u"
>
  danger
</span>
`;

exports[`Badge default 1`] = `
<span
  className="css-17jd12v"
>
  default
</span>
`;

exports[`Badge outline 1`] = `
<span
  className="css-bvpqwa"
>
  outline
</span>
`;

exports[`Badge primary 1`] = `
<span
  className="css-11hyrb9"
>
  primary
</span>
`;

exports[`Badge success 1`] = `
<span
  className="css-y6ql0v"
>
  success
</span>
`;

exports[`Badge warning 1`] = `
<span
  className="css-1fasnxp"
>
  warning
</span>
`;
